--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,15 @@ dependencies:
   animated_splash_screen: ^1.3.0
   bordered_text: ^2.0.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  dio: ^4.0.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  freezed_annotation: ^2.4.1
+  get_it: ^7.6.0
   google_fonts: ^5.1.0
+  injectable: ^2.1.2
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
   video_player: ^2.7.0
@@ -45,6 +50,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.4.1
+  injectable_generator: ^2.1.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
