--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   get_it: ^7.6.0
   google_fonts: ^5.1.0
   injectable: ^2.1.2
+  intl: ^0.18.1
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
+  share_plus: ^4.0.3
   video_player: ^2.7.0
 
 dev_dependencies:
